--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -3,7 +3,7 @@ name: Scheduled Health Check
 # Controls when the action will run.
 on:
   schedule:
-    - cron: "30 * * * *"
+    - cron: "*/10 * * * *"
   workflow_dispatch:
 
 jobs:
